--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <title>User Profile</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <title>Bolão dos Bêbados</title>
   </head>
   <body>
     <div id="root"></div>
